[package]
name = "antecedence"
license = "MIT"
authors = ["Kieran Griffiths <20491633@student.uwa.edu.au>"]
repository = "https://github.com/TinBryn/antecedence.git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
tokio = { version = "1.15.0", features = ["full"] }
rusqlite = "0.26.3"
